--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "mocha --require @babel/register --timeout 10000"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,6 +24,10 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.11"
+    "@types/ws": "^8.5.11",
+    "chai": "^4.5.0",
+    "chai-http": "^5.0.0",
+    "mocha": "^10.7.0",
+    "sinon": "^18.0.0"
   }
 }
