--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^4.5.0",
     "chai-http": "^5.0.0",
     "mocha": "^10.7.0",
+    "sequelize-cli": "^6.6.2",
     "sinon": "^18.0.0"
   }
 }
